--- a/signup.html
+++ b/signup.html
@@ -35,9 +35,9 @@
 		$("#singup").on('click',function(){
 			var name = $("#name").val();
 			if(name=="1342751274@qq.com"){
-				alert("已注册");
+				alert("This has been registered before.");
 			}
-			alert("注册成功，请登录！");
+			alert("Successful！");
 			var test = window.location.href;
 			window.open(test.replace('signup','index'));
 			
