--- a/detail.html
+++ b/detail.html
@@ -3,12 +3,21 @@
 
 <head>
 	<meta charset="utf-8">
-					<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Requests</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Requests</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<style>
+		label {
+			display: inline-block;
+			max-width: 100%;
+			margin-bottom: 5px;
+			font-weight: 700;
+			color: #fff;
+		}
+	</style>
 </head>
 
-<body>
+<body style="background: url('../1/img/bg2.jpg');">
 	<div class="container">
 		<form action="#" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
 			<fieldset>
