--- a/myrequests.html
+++ b/myrequests.html
@@ -41,30 +41,36 @@
 			<tr>
 				<td>1</td>
 				<td>2</td>
-				<td>22</td>
+				<td><button  onclick="toSubmit()">22</button></td>
 			</tr>
 			<tr>
 				<td>1</td>
 				<td>2</td>
-				<td>22</td>
+				<td><button  onclick="toSubmit()">22</button></td>
 			</tr>
 			<tr>
 				<td>1</td>
 				<td>2</td>
-				<td>22</td>
+				<td><button  onclick="toSubmit()">22</button></td>
 			</tr>
 			<tr>
 				<td>1</td>
 				<td>2</td>
-				<td>22</td>
+				<td><button  onclick="toSubmit()">22</button></td>
 			</tr>
 			<tr>
 				<td>1</td>
 				<td>2</td>
-				<td>22</td>
+				<td><button  onclick="toSubmit()">22</button></td>
 			</tr>
 		</table>
 	</div>
+	<script>
+		function toSubmit(){
+			var test = window.location.href;
+			window.open(test.replace('myrequests','detail'));
+		}
+	</script>
 </body>
 
 </html>
