--- a/requests.html
+++ b/requests.html
@@ -58,9 +58,9 @@
 <body style="background: url('../1/img/bg2.jpg');">
 	<div class="container">
 		<div class="time-item">
-			<strong id="hour_show"><s id="h"></s>0时</strong>
-			<strong id="minute_show"><s></s>01分</strong>
-			<strong id="second_show"><s></s>00秒</strong>
+			<strong id="hour_show"><s id="h"></s>0</strong>
+			<strong id="minute_show"><s></s>01</strong>
+			<strong id="second_show"><s></s>00</strong>
 		</div>
 		<form action="#" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
 			<fieldset>
@@ -76,19 +76,19 @@
 					<label>priority</label>
 					<input type="text" class="form-control" name="priority" placeholder="" />
 				</div>
-				<button type="submit" class="btn btn-default" style="text-align: right;"><a href="#">submit</a></button>
+				<button type="button" class="btn btn-default" style="text-align: right;" onclick="toSubmit()">submit</button>
 			</fieldset>
 		</form>
 	</div>
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<script type="text/javascript">
-		var intDiff = parseInt(60); //倒计时总秒数量
+		var intDiff = parseInt(60);
 		function timer(intDiff) {
 			window.setInterval(function () {
 				var day = 0,
 					hour = 0,
 					minute = 0,
-					second = 0; //时间默认值		
+					second = 0;	
 				if (intDiff > 0) {
 					day = Math.floor(intDiff / (60 * 60 * 24));
 					hour = Math.floor(intDiff / (60 * 60)) - (day * 24);
@@ -97,15 +97,20 @@
 				}
 				if (minute <= 9) minute = '0' + minute;
 				if (second <= 9) second = '0' + second;
-				$('#hour_show').html('<s id="h"></s>' + hour + '时');
-				$('#minute_show').html('<s></s>' + minute + '分');
-				$('#second_show').html('<s></s>' + second + '秒');
+				$('#hour_show').html('<s id="h"></s>' + hour + '');
+				$('#minute_show').html('<s></s>' + minute + '');
+				$('#second_show').html('<s></s>' + second + '');
 				intDiff--;
 			}, 1000);
 		}
 		$(function () {
 			timer(intDiff);
 		});
+		function toSubmit(){
+			alert("pass！！！")
+			var test = window.location.href;
+			window.open(test.replace('requests','myrequests'));
+		}
 	</script>
 </body>
 
