--- a/requests.html
+++ b/requests.html
@@ -76,19 +76,19 @@
 					<label>priority</label>
 					<input type="text" class="form-control" name="priority" placeholder="" />
 				</div>
-				<button type="button" class="btn btn-default" style="text-align: right;" onclick="toSubmit()">submit</button>
+				<button type="submit" class="btn btn-default" style="text-align: right;"><a href="#">submit</a></button>
 			</fieldset>
 		</form>
 	</div>
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<script type="text/javascript">
-		var intDiff = parseInt(60);
+		var intDiff = parseInt(60); //倒计时总秒数量
 		function timer(intDiff) {
 			window.setInterval(function () {
 				var day = 0,
 					hour = 0,
 					minute = 0,
-					second = 0;	
+					second = 0; //时间默认值		
 				if (intDiff > 0) {
 					day = Math.floor(intDiff / (60 * 60 * 24));
 					hour = Math.floor(intDiff / (60 * 60)) - (day * 24);
@@ -97,20 +97,15 @@
 				}
 				if (minute <= 9) minute = '0' + minute;
 				if (second <= 9) second = '0' + second;
-				$('#hour_show').html('<s id="h"></s>' + hour + '');
-				$('#minute_show').html('<s></s>' + minute + '');
-				$('#second_show').html('<s></s>' + second + '');
+				$('#hour_show').html('<s id="h"></s>' + hour + 'hour');
+				$('#minute_show').html('<s></s>' + minute + 'minute');
+				$('#second_show').html('<s></s>' + second + 'second');
 				intDiff--;
 			}, 1000);
 		}
 		$(function () {
 			timer(intDiff);
 		});
-		function toSubmit(){
-			alert("pass！！！")
-			var test = window.location.href;
-			window.open(test.replace('requests','myrequests'));
-		}
 	</script>
 </body>
 
