--- a/solved.html
+++ b/solved.html
@@ -44,8 +44,8 @@
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-				<li class="active"><a href="/teacher">All unsolved tickets <span class="sr-only">(current)</span></a></li>
-				<li><a href="/solved">solved requests</a></li>
+				<li><a href="/teacher">All unsolved tickets</a></li>
+				<li class="active"><a href="/solved">solved requests</a></li>
 
 			  </ul>
 			  <ul class="nav navbar-nav navbar-right">
@@ -55,7 +55,7 @@
 			</div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
-		<h1>All unsolved tickets</h1>
+		<h1>All solved requests</h1>
 		<table class="table table-hover table-bordered" id="sampleTable">
 			<thead>
 				<tr>
