--- a/admin_detail.html
+++ b/admin_detail.html
@@ -19,7 +19,8 @@
 
 <body style="background: url('/static/img/bg2.jpg');">
 	<div class="container">
-		<form action="#" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
+		<form action="/admin_detail" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
+        {% csrf_token %}
 			<fieldset>
 				<div class="form-group">
 					<label>{{ mainReq.subject }}</label>
@@ -29,32 +30,26 @@
 				</div>
 				<hr>
 				<div class="form-group">
-                    <label>you subject!</label></br>
-                    <textarea name="descrition" id="descrition" style="width: 100%;" rows="10">{{ mainReq.descrition }}</textarea>
-                    {% if mainReq.reply_content %}
-                        <label>reply</label></br>
-					    <input type="text" class="form-control" name="" placeholder="to:" value="{{ mainReq.reply_user.username }}"/>
-					    <textarea name="descrition" id="descrition" style="width: 100%;" rows="10">{{ mainReq.reply_content }}</textarea>
-                    {% else %}
-                        <label>no replay, please wait !</label></br>
-{#                        <textarea name="descrition" id="descrition" style="width: 100%;" rows="10" disabled>{{ mainReq.reply_content }}</textarea>#}
-                    {% endif %}
-
+                    <label>{{ mainReq.user.username }} subject!</label></br>
+                    <textarea name="studescrition" id="descrition" style="width: 100%;" rows="10" disabled>{{ mainReq.descrition }}</textarea>
+                    <label>reply</label></br>
+                    <input type="text" class="form-control" name="" placeholder="to:" value="{{ mainReq.user.username }}"/>
+                    <input type="hidden" class="form-control" name="rid" value="{{ mainReq.id }}"/>
+                    <textarea placeholder="input your replay" name="replay" id="descrition" style="width: 100%;" rows="10">{{ mainReq.reply_content }}</textarea>
 					<button class="btn-info btn">share</button>
-
 				</div>
-				<div class="form-group">
+                <div class="form-group">
 					<hr>
                     {% if mainReq.reply_content %}
                         <div style="display: flex;">
-                            <label>{{ mainReq.reply_user.username }}</label>&nbsp;&nbsp;&nbsp;&nbsp;<label>{{ now_date }}</label>
+                            <label>{{ mainReq.reply_user.username }}</label>&nbsp;&nbsp;&nbsp;&nbsp;<label>{{ now_date }}</label> &nbsp;&nbsp;&nbsp;&nbsp;<label>have replay</label>
                         </div>
                     {% else %}
                         <div style="display: flex;">
-                            <label>just wait!</label>
+                            <button type="submit">replay<button>
                         </div>
                     {% endif %}
-				</div>
+                </div>
 			</fieldset>
 		</form>
 	</div>
