--- a/requests.html
+++ b/requests.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Requests</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
 	<style type="text/css">
 		h1 {
-			font-family: "Thames";
+			font-family: "微软雅黑";
 			font-size: 40px;
 			margin: 20px 0;
 			border-bottom: solid 1px #ccc;
@@ -53,17 +53,17 @@
 			color: #fff;
 		}
 	</style>
-
 </head>
 
-<body style="background: url('../1/img/bg2.jpg');">
+<body style="background: url('/static/img/bg2.jpg');">
 	<div class="container">
 		<div class="time-item">
-			<strong id="hour_show"><s id="h"></s>0hour</strong>
-			<strong id="minute_show"><s></s>00minute</strong>
-			<strong id="second_show"><s></s>00second</strong>
+			<strong id="hour_show"><s id="h"></s>0</strong>
+			<strong id="minute_show"><s></s>01</strong>
+			<strong id="second_show"><s></s>00</strong>
 		</div>
-		<form action="#" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
+		<form action="/requests" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
+            {% csrf_token %}
 			<fieldset>
 				<div class="form-group">
 					<label>subject</label>
@@ -77,19 +77,19 @@
 					<label>priority</label>
 					<input type="text" class="form-control" name="priority" placeholder="" />
 				</div>
-				<button type="submit" class="btn btn-default" style="text-align: right;"><a href="#">submit</a></button>
+				<button type="submit" class="btn btn-default" style="text-align: right;">submit</button>
 			</fieldset>
 		</form>
 	</div>
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<script type="text/javascript">
-		var intDiff = parseInt(0); //timer start time
+		var intDiff = parseInt(60);
 		function timer(intDiff) {
 			window.setInterval(function () {
 				var day = 0,
 					hour = 0,
 					minute = 0,
-					second = 0; //default time		
+					second = 0;	
 				if (intDiff > 0) {
 					day = Math.floor(intDiff / (60 * 60 * 24));
 					hour = Math.floor(intDiff / (60 * 60)) - (day * 24);
@@ -98,16 +98,26 @@
 				}
 				if (minute <= 9) minute = '0' + minute;
 				if (second <= 9) second = '0' + second;
-				$('#hour_show').html('<s id="h"></s>' + hour + 'hour');
-				$('#minute_show').html('<s></s>' + minute + 'minutes');
-				$('#second_show').html('<s></s>' + second + 'seconds');
-				intDiff++;
+				$('#hour_show').html('<s id="h"></s>' + hour + '');
+				$('#minute_show').html('<s></s>' + minute + '');
+				$('#second_show').html('<s></s>' + second + '');
+				intDiff--;
 			}, 1000);
 		}
 		$(function () {
 			timer(intDiff);
 		});
+		function toSubmit(){
+			alert("pass！！！")
+			var test = window.location.href;
+			window.open(test.replace('requests','myrequests'));
+		}
 	</script>
+<script>
+    {% if msg %}
+        alert("{{ msg }}")
+    {% endif %}
+</script>
 </body>
 
 </html>
