--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>index</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
 	<style>
 		label {
 			display: inline-block;
@@ -17,20 +17,21 @@
 	</style>
 </head>
 
-<body style="background: url('../1/img/bg2.jpg');">
+<body style="background: url('/static/img/bg2.jpg');">
 	<div class="container">
-		<form action="#" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
-			<fieldset>
+		<form action="/accounts/register" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
+			{% csrf_token %}
+            <fieldset>
 				<div class="form-group">
 					<label>EMAIL:</label>
-					<input type="email" class="form-control" name="email" id="card_name2" placeholder="" />
+					<input type="email" class="form-control" name="username" id="card_name2" placeholder="" />
 				</div>
 				<div class=" form-group">
 					<label>password:</label>
-					<input type="password" class="form-control" name="pwd" id="card_name3"/>
+					<input type="password" class="form-control" name="password" id="card_name3"/>
 				</div>
-				<button type="button" class="btn btn-default" id="singup" onclick="toValidate()">sign up</button>
-				<button type="button" class="btn btn-default"><a href="index.html">sign in</a></button>
+				<button type="submit" class="btn btn-default" id="singup">sign up</button>
+				<a href="/accounts/login">sign in</a>
 			</fieldset>
 		</form>
 	</div>
@@ -40,19 +41,19 @@
 	<script type="text/javascript" src="js/jquery.dataTables.min.js"></script>
 	<script type="text/javascript" src="js/dataTables.bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/validate.js"></script>
+    <script>
+        {% if msg %}
+            alert("{{ msg }}")
+        {% endif %}
+    </script>
 	
 	<script>
 		function toValidate(){
 			var val = new validate({
-				/*rules里面是检验规则，
-				*key为需要检验的input的id,
-				*value为此input对应的检验规则
-				*/
 				rules:{
 					card_name2:"email",
 					card_name3:"password"
 				},
-				/*submitFun里面为检验成功后要执行的方法*/
 				submitFun:function(){
 					toSubmit();
 				}
