--- a/requests.html
+++ b/requests.html
@@ -66,15 +66,15 @@
             {% csrf_token %}
 			<fieldset>
 				<div class="form-group">
-					<label>subject</label>
+					<label>Subject</label>
 					<input type="text" class="form-control" name="subject" placeholder="" />
 				</div>
 				<div class=" form-group">
-					<label>descrition</label></br>
+					<label>Description</label></br>
 					<textarea name="descrition" id="descrition" style="width: 100%;" rows="10"></textarea>
 				</div>
 				<div class="form-group">
-					<label>priority</label>
+					<label>Priority</label>
 					<input type="text" class="form-control" name="priority" placeholder="" />
 				</div>
 				<button type="submit" class="btn btn-default" style="text-align: right;">submit</button>
