Added back button to FAQ, REQUESTS AND MYREQUESTS

--- a/faq.html
+++ b/faq.html
@@ -4,16 +4,17 @@
         <title>Frequently Asked Questions</title>
         <!--Ion icons-->
         <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
+        <link href="./styles.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        
+
         <section>
             <div class="container">
+                <button onclick="window.history.back()">Back</button>
                 <h1 class ="title">
                     Frequently Asked Questions
                     </h1>
-                    
+
                     <div class="faq-item" id="question1">
                         <a class="faq-link" href="#question1">
                             Who can see my submitted questions?
