--- a/index.html
+++ b/index.html
@@ -17,21 +17,35 @@
 	</style>
 </head>
 
-<body style="background: url('/static/img/bg2.jpg');">
+<body style="background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url('/static/img/bg2.jpg');
+background-size: cover;
+">
+
+	<section class="header">
+		<a href="index.html"></a><div><img src="/static/img/KCLOGO.jpg" unselectable="on" width="225" height="150" ></div>
+		
+		<div class="text-box" style="width: 90%; color: #fff; position: absolute; top:50%; left:50%; transform: translate(-50%, -70%); text-align: center;">
+			
+			<h1 style="font-size: 50px; transform: translate(0%, 200%);">Welcome to King's Smart Ticketing Service</h1>
+			
+		</div>
+
+	</section>
+
 	<div class="container">
-		<form action="/accounts/login" method="post" style="border: 1px solid #8e8b8b;padding: 20px;margin-top: 20px;">
+		<form action="/accounts/login" method="post" style="border: 1px solid #e00d0d;padding: 20px;margin-top: 0px;">
 			<fieldset>
                 {% csrf_token %}
 				<div class="form-group">
-					<label>EMAIL:</label>
+					<label>Email:</label>
 					<input type="email" class="form-control" name="username" id="card_name2" placeholder="" />
 				</div>
 				<div class=" form-group">
-					<label>password:</label>
+					<label>Password:</label>
 					<input type="password" class="form-control" name="password" id="card_name3"/>
 				</div>
-				<button type="submit" class="btn btn-default">sign in</button>
-				<a href="/accounts/register">sign up</a>
+				<button type="submit" class="btn btn-default">Sign in</button>
+				<a href="/accounts/register">Sign up</a>
 			</fieldset>
 		</form>
 	</div>
