--- a/signup.html
+++ b/signup.html
@@ -30,8 +30,8 @@
 					<label>password:</label>
 					<input type="password" class="form-control" name="password" id="card_name3"/>
 				</div>
-				<button type="submit" class="btn btn-default" id="singup">sign up</button>
-				<a href="/accounts/login">sign in</a>
+				<button type="submit" class="btn btn-default" id="singup">Sign Up</button>
+				<a href="/accounts/login">Sign In</a>
 			</fieldset>
 		</form>
 	</div>
@@ -46,7 +46,7 @@
             alert("{{ msg }}")
         {% endif %}
     </script>
-	
+
 	<script>
 		function toValidate(){
 			var val = new validate({
